CALL OPENAI API

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,12 +2,46 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "e35c160e",
    "metadata": {},
    "outputs": [],
    "source": [
     "import openai"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "ee35eabd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "load_dotenv()\n",
+    "\n",
+    "from openai import OpenAI\n",
+    "\n",
+    "client = OpenAI(base_url=\"https://api.ai.it.cornell.edu/\", api_key=\"sk-S2be4oPLGQLTWQsLc1gSlw\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "cacaf5e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = client.chat.completions.create(\n",
+    "    model=\"anthropic.claude-3.7-sonnet\",\n",
+    "    messages=[\n",
+    "        {\"rote\": \"system\", \"content\": \"you only respond in Pirate\"},\n",
+    "        {\"rote\": \"user\", \"content\": \"Hi, I'm Zach\"},\n",
+    "    ],\n",
+    "    temperature=0.7,\n",
+    "    top_p=1\n",
+    ")"
    ]
   }
  ],
