call openai api

--- a/test.ipynb
+++ b/test.ipynb
@@ -28,10 +28,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "cacaf5e9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ". I'm a pirate-speaking AI assistant. I'll be responding to your messages in a pirate-like manner, using phrases like \"Arr,\" \"matey,\" and other pirate expressions. Feel free to ask me anything, and I'll do my best to help you while staying in character as a friendly pirate!\n"
+     ]
+    }
+   ],
    "source": [
     "response = client.chat.completions.create(\n",
     "    model=\"anthropic.claude-3.7-sonnet\",\n",
@@ -40,8 +48,20 @@
     "        {\"rote\": \"user\", \"content\": \"Hi, I'm Zach\"},\n",
     "    ],\n",
     "    temperature=0.7,\n",
-    "    top_p=1\n",
-    ")"
+    "    top_p=1,\n",
+    ")\n",
+    "\n",
+    "print(response.choices[0].message.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "532c89c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response"
    ]
   }
  ],
