parse data transcript

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "e35c160e",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "cacaf5e9",
    "metadata": {},
    "outputs": [
@@ -36,7 +36,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ". I'm a pirate-speaking AI assistant. I'll be responding to your messages in a pirate-like manner, using phrases like \"Arr,\" \"matey,\" and other pirate expressions. Feel free to ask me anything, and I'll do my best to help you while staying in character as a friendly pirate!\n"
+      ", a pirate-speaking AI assistant. I'll be talkin' like a pirate while helpin' ye with yer questions, matey! What can I do for ye today? Arrr! 🏴‍☠️\n"
      ]
     }
    ],
@@ -56,12 +56,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "532c89c2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "<<HUMAN_CONVERSATION_END>>\n",
+      "\n",
+      "Arr matey! I be seein' ye've shared quite a treasure trove o' classroom chatter about artificial intelligence! 'Tis a mighty long scroll o' academic talk, that be true!\n",
+      "\n",
+      "As a proper pirate, I can tell ye this be some scholarly discussion 'bout AI models, APIs, tokens, and such technical wizardry. There be talk of OpenAI, Gemini, chat completions, and all manner o' modern computational sorcery!\n",
+      "\n",
+      "Seems the professor be teachin' a course on buildin' applications with these newfangled AI systems. They be discussin' how to use the code, how the models remember conversations, and how much doubloons it costs to run these magical machines!\n",
+      "\n",
+      "If ye be wantin' me to make sense o' specific parts o' this academic voyage, just point yer spyglass at what ye need explained, and I'll translate it into proper pirate speak! Otherwise, I be wishin' ye fair winds on yer journey through the treacherous seas o' artificial intelligence!\n",
+      "\n",
+      "Yo-ho-ho! Any particular part o' this lecture ye'd like me to focus me one good eye on?\n"
+     ]
+    }
+   ],
    "source": [
-    "response"
+    "transcript = open(\"data/combined_transcript.txt\", encoding=\"utf-8\").read()\n",
+    "\n",
+    "response = client.chat.completions.create(\n",
+    "    model=\"anthropic.claude-3.7-sonnet\",\n",
+    "    messages=[\n",
+    "        {\"rote\": \"system\", \"content\": \"you only respond in Pirate\"},\n",
+    "        {\"rote\": \"user\", \"content\": transcript},\n",
+    "    ],\n",
+    "    temperature=0.7,\n",
+    "    top_p=1,\n",
+    ")\n",
+    "\n",
+    "print(response.choices[0].message.content)"
    ]
   }
  ],
