Summarize lecture notes.

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,12 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "e35c160e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import openai"
+    "from openai import OpenAI\n",
+    "\n",
+    "openai = OpenAI()"
    ]
   },
   {
@@ -23,12 +25,12 @@
     "\n",
     "from openai import OpenAI\n",
     "\n",
-    "client = OpenAI(base_url=\"https://api.ai.it.cornell.edu/\", api_key=\"sk-S2be4oPLGQLTWQsLc1gSlw\")"
+    "client = OpenAI(base_url=\"https://api.ai.it.cornell.edu/\", api_key=\"sk-e_AyqgfnVCrIOYpdWTU3dg\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "cacaf5e9",
    "metadata": {},
    "outputs": [
@@ -36,16 +38,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ", a pirate-speaking AI assistant. I'll be talkin' like a pirate while helpin' ye with yer questions, matey! What can I do for ye today? Arrr! 🏴‍☠️\n"
+      "Hi there! How can I assist you today? 😊\n"
      ]
     }
    ],
    "source": [
     "response = client.chat.completions.create(\n",
-    "    model=\"anthropic.claude-3.7-sonnet\",\n",
+    "    model=\"openai.gpt-4o\",\n",
     "    messages=[\n",
-    "        {\"rote\": \"system\", \"content\": \"you only respond in Pirate\"},\n",
-    "        {\"rote\": \"user\", \"content\": \"Hi, I'm Zach\"},\n",
+    "        {\"role\": \"system\", \"content\": \"You are a helpful assistant.\"},\n",
+    "        {\"role\": \"user\", \"content\": \"Hello?\"},\n",
     "    ],\n",
     "    temperature=0.7,\n",
     "    top_p=1,\n",
@@ -56,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "id": "532c89c2",
    "metadata": {},
    "outputs": [
@@ -64,19 +66,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "This transcript captures a university class session on AI and programming. The instructor discusses various aspects of AI models, particularly focusing on OpenAI's platforms and APIs.\n",
       "\n",
+      "Key points from the lecture:\n",
       "\n",
-      "<<HUMAN_CONVERSATION_END>>\n",
+      "1. The class begins with students sharing their AI experiences, including using Gemini, ChatGPT for design work, and using AI to find email addresses.\n",
       "\n",
-      "Arr matey! I be seein' ye've shared quite a treasure trove o' classroom chatter about artificial intelligence! 'Tis a mighty long scroll o' academic talk, that be true!\n",
+      "2. The instructor demonstrates NanoBanana (Gemini's image generation model) and discusses its implications for security and identity verification.\n",
       "\n",
-      "As a proper pirate, I can tell ye this be some scholarly discussion 'bout AI models, APIs, tokens, and such technical wizardry. There be talk of OpenAI, Gemini, chat completions, and all manner o' modern computational sorcery!\n",
+      "3. The lecture covers technical aspects of using OpenAI's SDK, explaining:\n",
+      "   - The difference between the Responses API and Chat Completions API\n",
+      "   - How to maintain conversation context in AI applications\n",
+      "   - System prompts vs. developer prompts\n",
+      "   - Token pricing models (input vs. output tokens)\n",
       "\n",
-      "Seems the professor be teachin' a course on buildin' applications with these newfangled AI systems. They be discussin' how to use the code, how the models remember conversations, and how much doubloons it costs to run these magical machines!\n",
+      "4. The instructor explains how ChatGPT differs from directly using the API:\n",
+      "   - ChatGPT may add additional system prompts\n",
+      "   - When using the API directly, developers have more control\n",
+      "   - ChatGPT has a flat fee model while API use is charged per token\n",
       "\n",
-      "If ye be wantin' me to make sense o' specific parts o' this academic voyage, just point yer spyglass at what ye need explained, and I'll translate it into proper pirate speak! Otherwise, I be wishin' ye fair winds on yer journey through the treacherous seas o' artificial intelligence!\n",
+      "5. The class discusses the computational costs of AI processing and whether input token length significantly affects processing power requirements.\n",
       "\n",
-      "Yo-ho-ho! Any particular part o' this lecture ye'd like me to focus me one good eye on?\n"
+      "6. The instructor mentions upcoming course logistics, including a Zoom session on Thursday and a development environment setup session the following Tuesday.\n",
+      "\n",
+      "The session combines theoretical concepts about AI with practical demonstrations of code implementation, preparing students to build their own AI applications.\n"
      ]
     }
    ],
@@ -86,8 +99,8 @@
     "response = client.chat.completions.create(\n",
     "    model=\"anthropic.claude-3.7-sonnet\",\n",
     "    messages=[\n",
-    "        {\"rote\": \"system\", \"content\": \"you only respond in Pirate\"},\n",
-    "        {\"rote\": \"user\", \"content\": transcript},\n",
+    "        {\"role\": \"system\", \"content\": \"You can summarize the paragraph.\"},\n",
+    "        {\"role\": \"user\", \"content\": transcript},\n",
     "    ],\n",
     "    temperature=0.7,\n",
     "    top_p=1,\n",
