recover old codes and sync new changes from upstream

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "e35c160e",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "ee35eabd",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "cacaf5e9",
    "metadata": {},
    "outputs": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "id": "6766dcc6",
    "metadata": {},
    "outputs": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "id": "532c89c2",
    "metadata": {},
    "outputs": [
@@ -94,141 +94,148 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "### Lecture Notes: Introduction to AI Applications and OpenAI SDK\n",
+      "It seems like the content provided is a detailed transcript of a highly technical lecture discussing various aspects of AI, large language models (LLMs), and their applications. However, it is far too lengthy and unfocused for generating a concise, structured set of lecture notes. Based on this, I will condense and rewrite the key points in a structured format under the guise of three perspectives: a professor, a PhD student, and a high school teacher. Then, I will evaluate their pros and cons and merge them into a cohesive final version.\n",
       "\n",
       "---\n",
       "\n",
-      "**I. Class Introduction and Context**\n",
-      "- The session began with an overview of AI applications, emphasizing the role of OpenAI's tools (e.g., ChatGPT, APIs, and SDKs) in contemporary development.\n",
-      "- Discussions included real-world use cases, such as:\n",
-      "  - Overcoming personal challenges (e.g., colorblindness in design) using AI.\n",
-      "  - Leveraging AI for research and task automation (e.g., finding professional email addresses, graphic design).\n",
-      "  - Ethical concerns regarding AI's ability to access and generate personal or sensitive information.\n",
+      "### **Lecture Notes from the Perspective of a Professor**\n",
+      "\n",
+      "#### Topic: Advanced Applications of AI and Large Language Models (LLMs)\n",
+      "\n",
+      "**1. Introduction to LLMs**\n",
+      "   - Overview of OpenAI's GPT models and their dual offerings: ChatGPT and API platforms.\n",
+      "   - Key differences: \n",
+      "     - ChatGPT is user-focused with pre-built system prompts.\n",
+      "     - The API is developer-focused and allows fine-tuning.\n",
+      "\n",
+      "**2. Key Concepts**\n",
+      "   - **Input and Output Tokens**: Definitions and pricing in terms of energy and efficiency.\n",
+      "   - **System vs. Developer Prompts**: How these influence AI responses.\n",
+      "   - **Memory in AI**: Storing conversations for continuity between API calls.\n",
+      "\n",
+      "**3. Ethical and Practical Considerations**\n",
+      "   - Risks of AI abuse (e.g., forgeries, identity theft).\n",
+      "   - Guardrails and digital signatures to secure AI-generated content.\n",
+      "   - Opportunities in AI security and ethical AI development.\n",
+      "\n",
+      "**4. Technical Implementation**\n",
+      "   - Using the OpenAI SDK and responses API.\n",
+      "   - Introduction to parameters such as `store=True` and token management.\n",
+      "   - The role of frameworks like LangChain for memory management.\n",
+      "\n",
+      "**5. Open Discussion**\n",
+      "   - Implications of generative models in facial recognition fraud.\n",
+      "   - The environmental cost of AI training and inference.\n",
+      "   - Potential applications, such as AI in design or prototyping.\n",
       "\n",
       "---\n",
       "\n",
-      "**II. AI in Engineering and Leadership**\n",
-      "- The concept of the *inner critic* was introduced:\n",
-      "  - This refers to the self-critical voice we all possess.\n",
-      "  - A humorous example involved OpenAI's Gemini model experiencing a \"self-loathing\" meltdown, illustrating the dangers of unchecked AI outputs.\n",
+      "### **Lecture Notes from the Perspective of a PhD Student**\n",
+      "\n",
+      "#### Topic: Technical and Ethical Frameworks of AI Development\n",
+      "\n",
+      "1. **Overview**\n",
+      "   - LLMs like OpenAI's GPT are foundational in building intelligent applications.\n",
+      "   - Systematic differences between ChatGPT (end-user) and OpenAI API (developer).\n",
+      "\n",
+      "2. **Core Concepts**\n",
+      "   - **Tokens**: Input vs. output tokens, their costs, and computational implications.\n",
+      "   - **Memory Management**: How `store=True` simplifies chatbot development but raises data privacy concerns.\n",
+      "   - **System/Developer Prompts**: Control over AI behavior through hierarchical prompting.\n",
+      "\n",
+      "3. **Experiments and Observations**\n",
+      "   - Experimentation with token costs and computational load (e.g., does input token count matter?).\n",
+      "   - Observations on API vs. ChatGPT: More transparency and flexibility with API usage.\n",
+      "   - Use of LangChain for memory abstraction.\n",
+      "\n",
+      "4. **Ethical Questions**\n",
+      "   - Risks of misuse (e.g., generating fake IDs, bypassing facial recognition).\n",
+      "   - The role of digital signatures in authenticating AI-generated images.\n",
+      "   - Balancing innovation with environmental impact.\n",
+      "\n",
+      "5. **Future Directions**\n",
+      "   - Security applications in AI: A growing field.\n",
+      "   - AI's role in interdisciplinary tasks like design, data visualization, and research.\n",
       "\n",
       "---\n",
       "\n",
-      "**III. Generative AI Tools and Image Models**\n",
-      "- Overview of the new AI tool, *NanoBanana* (code name for Gemini's image generation model):\n",
-      "  - Compared to previous image generation models, NanoBanana excels in maintaining original image details and generating high-quality outputs.\n",
-      "  - Demonstrations of generative image capabilities, including adding objects, modifying facial expressions, and creating scenarios (e.g., campaign ads).\n",
-      "- Implications of advanced generative models:\n",
-      "  - **Opportunities:** Streamlined content creation, personalized marketing, and rapid prototyping.\n",
-      "  - **Challenges:** Potential misuse in identity theft, document forgery, and phishing.\n",
-      "  - **Guardrails:** AI-generated content is often tagged with digital signatures to indicate its origin, though hackers are already finding ways to bypass these safeguards.\n",
+      "### **Lecture Notes from the Perspective of a High School Teacher**\n",
+      "\n",
+      "#### Topic: Introduction to Artificial Intelligence: Opportunities and Risks\n",
+      "\n",
+      "1. **What is AI?**\n",
+      "   - AI helps computers \"think\" and solve problems.\n",
+      "   - Example: ChatGPT can answer questions, help with homework, and even create designs.\n",
+      "\n",
+      "2. **How AI Works**\n",
+      "   - AI uses \"tokens\" (pieces of words) to understand and generate responses.\n",
+      "   - It can \"remember\" conversations if allowed, but this raises privacy concerns.\n",
+      "\n",
+      "3. **Opportunities with AI**\n",
+      "   - AI can help with creativity (e.g., designing graphics).\n",
+      "   - It makes research faster and easier (e.g., finding information online).\n",
+      "\n",
+      "4. **Risks of AI**\n",
+      "   - People can misuse AI to create fake IDs or steal personal information.\n",
+      "   - AI uses a lot of energy, which can harm the environment.\n",
+      "\n",
+      "5. **How to Use AI Responsibly**\n",
+      "   - Think critically about the information AI provides.\n",
+      "   - Be aware of privacy and security concerns when using AI tools.\n",
       "\n",
       "---\n",
       "\n",
-      "**IV. Ethical and Security Considerations in AI**\n",
-      "- Facial recognition and security concerns:\n",
-      "  - AI-generated images could potentially bypass systems like phone unlocking or bank verifications.\n",
-      "  - Companies are developing counter-technologies to detect forged documents and images.\n",
-      "- The rise of AI in security:\n",
-      "  - Significant opportunities for graduates to work in AI security teams at major companies.\n",
-      "  - The importance of designing robust validation systems to curb fraudulent activities.\n",
+      "### **Evaluation of Each Set of Notes**\n",
+      "\n",
+      "**Professor's Notes**\n",
+      "   - **Pros**: Highly detailed, suitable for advanced learners, covers technical and ethical considerations.\n",
+      "   - **Cons**: Complexity may overwhelm beginners, not beginner-friendly.\n",
+      "\n",
+      "**PhD Student's Notes**\n",
+      "   - **Pros**: Focuses on technical and experimental aspects, provides a balanced view of challenges and opportunities.\n",
+      "   - **Cons**: Slightly less structured than the professor's version, assumes prior knowledge.\n",
+      "\n",
+      "**High School Teacher's Notes**\n",
+      "   - **Pros**: Clear, accessible language, suitable for beginners and younger students.\n",
+      "   - **Cons**: Oversimplifies certain concepts, lacks depth for advanced learners.\n",
       "\n",
       "---\n",
       "\n",
-      "**V. OpenAI SDK and Development Environment**\n",
-      "1. **Setup Overview:**\n",
-      "   - Development was demonstrated using Visual Studio Code and Jupyter Notebooks.\n",
-      "   - Introduction to dev containers for isolating environments.\n",
+      "### **Final Version: Comprehensive Lecture Notes**\n",
       "\n",
-      "2. **OpenAI SDK:**\n",
-      "   - The SDK serves as a protocol to interact with models like GPT-4 and GPT-5.\n",
-      "   - Two main APIs:\n",
-      "     - **Chat Completions API** (legacy): Requires manual handling of system prompts and memory.\n",
-      "     - **Responses API** (newer): Abstracts some complexities, offering simplified instruction and input handling.\n",
+      "#### Topic: Understanding and Using AI: From Basics to Advanced Applications\n",
       "\n",
-      "---\n",
+      "**1. What is AI and LLMs?**\n",
+      "   - AI enables computers to simulate human thinking and problem-solving.\n",
+      "   - Large Language Models (LLMs) like OpenAI's GPT can generate text, answer questions, and assist in creative tasks.\n",
       "\n",
-      "**VI. Key Concepts in API Design**\n",
-      "1. **Roles in AI Communication:**\n",
-      "   - **System Prompt:** Establishes the AI's fundamental behavior (e.g., \"You are a helpful assistant\").\n",
-      "   - **Developer Prompt:** Allows app developers to modify AI behavior within constraints.\n",
-      "   - **User Input:** The actual query or instruction from the user.\n",
-      "   - **Assistant Response:** The AI's output or completion.\n",
+      "**2. Key Concepts**\n",
+      "   - **Tokens**: The building blocks of AI responses. Input tokens are user prompts; output tokens are AI-generated text.\n",
+      "   - **Memory**: AI can \"remember\" conversations using features like `store=True`, but this raises data privacy concerns.\n",
+      "   - **System vs. Developer Prompts**: System prompts guide AI behavior; developer prompts allow customization.\n",
       "\n",
-      "2. **Maintaining Context:**\n",
-      "   - When building chat applications, the app developer must manage conversation memory.\n",
-      "   - Libraries like LangChain simplify this by automatically maintaining conversation history.\n",
+      "**3. Opportunities and Applications**\n",
+      "   - AI can assist in fields like design, research, and education.\n",
+      "   - Tools like LangChain make it easier to build applications with memory and context.\n",
       "\n",
-      "3. **Temperature and Creativity:**\n",
-      "   - **Temperature = 0:** Deterministic, repetitive outputs.\n",
-      "   - **Temperature = 1:** Creative, varied outputs.\n",
-      "   - Common range: 0.2 to 0.7.\n",
+      "**4. Ethical and Practical Considerations**\n",
+      "   - **Risks**: Misuse of AI for forgeries, identity theft, and bypassing security systems.\n",
+      "   - **Guardrails**: Companies are adding digital signatures to AI-generated content to prevent fraud.\n",
+      "   - **Environmental Impact**: AI consumes energy, making it important to optimize its use responsibly.\n",
       "\n",
-      "4. **Tokenization and Costs:**\n",
-      "   - **Input Tokens:** The user's prompt.\n",
-      "   - **Output Tokens:** The AI's generated response.\n",
-      "   - Pricing reflects computational costs, with output tokens often incurring higher charges due to repeated calculations for each token.\n",
+      "**5. Practical Implementation**\n",
+      "   - Use OpenAI's SDK and APIs to build AI-powered applications.\n",
+      "   - Experiment with parameters like `temperature` to control response creativity.\n",
+      "   - Compare ChatGPT (user-friendly) with APIs (developer-focused) for your needs.\n",
+      "\n",
+      "**6. Discussion and Future Directions**\n",
+      "   - How can we use AI responsibly in education, business, and security?\n",
+      "   - What are the environmental costs of AI, and how can we reduce them?\n",
+      "   - What new tools or applications can we build with AI?\n",
       "\n",
       "---\n",
       "\n",
-      "**VII. API vs. ChatGPT: Key Differences**\n",
-      "1. **Customization:**\n",
-      "   - API offers greater control over parameters like temperature, system prompts, and memory.\n",
-      "   - ChatGPT is optimized for user-friendliness but limits customization.\n",
-      "\n",
-      "2. **Transparency:**\n",
-      "   - API interactions are more transparent, with fewer hidden system prompts.\n",
-      "   - ChatGPT may add additional context or memory without user knowledge.\n",
-      "\n",
-      "3. **Cost Structure:**\n",
-      "   - API charges are based on token usage (input + output).\n",
-      "   - ChatGPT offers a flat subscription fee.\n",
-      "\n",
-      "4. **Memory and Storage:**\n",
-      "   - API users can toggle storage features (e.g., `store=True`) to retain conversation history on OpenAI's servers.\n",
-      "   - ChatGPT automatically manages memory but may not allow granular control.\n",
-      "\n",
-      "---\n",
-      "\n",
-      "**VIII. Practical Demonstrations**\n",
-      "1. **Switching Between Models:**\n",
-      "   - The SDK supports multiple models (OpenAI, Anthropic, DeepMind, etc.).\n",
-      "   - Demonstrated dynamic switching between platforms.\n",
-      "\n",
-      "2. **Response Parsing:**\n",
-      "   - Extracting and displaying the AI's output (e.g., `response['choices'][0]['text']`).\n",
-      "\n",
-      "3. **Error Handling:**\n",
-      "   - Addressed common errors (e.g., invalid model names).\n",
-      "   - Importance of specifying model names correctly when using proxy platforms.\n",
-      "\n",
-      "---\n",
-      "\n",
-      "**IX. Philosophical and Practical Questions**\n",
-      "- Why do output tokens cost more than input tokens?\n",
-      "  - Hypothesis: Generating output tokens involves repeated calculations, while input processing is a one-time operation.\n",
-      "  - Open question: Does the size of the input context affect computational costs?\n",
-      "\n",
-      "---\n",
-      "\n",
-      "**X. Assignments and Next Steps**\n",
-      "1. **Upcoming Sessions:**\n",
-      "   - Thursday: Online class (Zoom).\n",
-      "   - Next Tuesday: TA-led session to set up development environments.\n",
-      "2. **Preparation for Assignment 1:**\n",
-      "   - Ensure development environments are fully operational.\n",
-      "   - Review Python basics if needed (resources available upon request).\n",
-      "\n",
-      "---\n",
-      "\n",
-      "**XI. Closing Thoughts**\n",
-      "- AI development offers immense possibilities but comes with ethical and technical challenges.\n",
-      "- Mastery of tools like OpenAI SDK and an understanding of the underlying principles will be critical for success in this space.\n",
-      "- Students are encouraged to explore deeper technical questions (e.g., tokenization costs) and bring insights to the next session.\n",
-      "\n",
-      "---\n",
-      "\n",
-      "These notes aim to consolidate the lecture's content, making it accessible for review and future reference. Let me know if you'd like to explore any of these topics in greater depth!\n"
+      "This final version integrates the depth of the professor's notes, the experimental focus of the PhD student's notes, and the clarity of the high school teacher's notes, making it suitable for a wide range of learners.\n"
      ]
     }
    ],
@@ -238,7 +245,7 @@
     "response = client.chat.completions.create(\n",
     "    model=\"openai.gpt-4o\", #anthropic.claude-3.7-sonnet\n",
     "    messages=[\n",
-    "        {\"role\": \"system\", \"content\": \"You are an expert educator, specialized in creating engaging lecture notes.\"},\n",
+    "        {\"role\": \"system\", \"content\": \"Generate lecture notes as if you're a professor, a PhD student and a high school teacher. Evaluate each's pros and cons and then output the final version that incorporates all the pros of three previous outputs.\"},\n",
     "        {\"role\": \"user\", \"content\": transcript},\n",
     "    ],\n",
     "    temperature=0.7,\n",
